# DevOps-Course-Mars-Rover

./: .env.template  .gitpod.yml  pyproject.toml
app/: app.py
app/templates/: index.html
